Wed Oct 03 12:36:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py,xappy/searchconnection_doctest3.txt: Fix from
	  Alex Bowley to coerce maxlen into an int in highlight.py

Tue Oct 02 18:31:54 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Minor correction to a documentation
	  comment.

Tue Oct 02 18:03:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add query_adjust(), allowing the
	  weights of one query to be adjusted based on the results of a
	  second query.
	* xappy/searchconnection_doctest2.txt: Add test for query_adjust()

Mon Oct 01 15:23:11 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add a __len__() method for
	  SearchResults().
	* xappy/searchconnection_doctest1.txt,
	  xappy/searchconnection_doctest2.txt: Test it

Mon Oct 01 14:23:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add SearchConnection.query_multweight,
	  which produces a query from a subquery by multiplying the weights
	  by a multiplier.
	* xappy/indexerconnection_doctest2.txt: Modify test of "Cannot
	  specify both `allow` and `deny`" to expect new extended message.
	* xappy/searchconnection_doctest2.txt: Add test of a multweight
	  query.

Sun Sep 30 10:37:21 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Add "required_facets" parameter to get_suggested_facets(),
	  allowing certain facets to be required in the list of returned
	  facets.

Fri Sep 28 16:12:35 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/coverage.py: Update copy of coverage.py to latest
	  version (with patches applied) to get correct results with
	  python2.5

Mon Sep 24 14:21:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt: