@@ -23,18 +23,65 @@ __docformat__ = "restructuredtext en"
 class SearchEngineError(Exception):
     r"""Base class for exceptions thrown by the search engine.
 
-    Any errors generated by the python level interface to xapian will be
-    instances of this class or its subclasses.
+    Any errors generated by xappy itself, or by xapian, will be instances of
+    this class or its subclasses.
 
     """
 
 class IndexerError(SearchEngineError):
-    r"""Class used to report errors from the indexing API.
+    r"""Class used to report errors relating to the indexing API.
 
     """
 
 class SearchError(SearchEngineError):
-    r"""Class used to report errors from the search API.
+    r"""Class used to report errors relating to the search API.
 
     """
 
+
+class XapianError(SearchEngineError):
+    r"""Base class for exceptions thrown by the xapian.
+
+    Any errors generated by xapian will be instances of this class or its
+    subclasses.
+
+    """
+
+def _rebase_xapian_exceptions():
+    """Add new base classes for all the xapian exceptions.
+
+    """
+    import xapian
+    for name in (
+                 'AssertionError',
+                 'DatabaseCorruptError',
+                 'DatabaseCreateError',
+                 'DatabaseError',
+                 'DatabaseLockError',
+                 'DatabaseModifiedError',
+                 'DatabaseOpeningError',
+                 'DatabaseVersionError',
+                 'DocNotFoundError',
+                 # We skip 'Error' because it inherits directly from exception
+                 # and this causes problems with method resolution order.
+                 # However, we probably don't need it anyway, because it's
+                 # just a base class, and shouldn't ever actually be raised.
+                 # Users can catch xappy.XapianError instead.
+                 'FeatureUnavailableError',
+                 'InternalError',
+                 'InvalidArgumentError',
+                 'InvalidOperationError',
+                 'LogicError',
+                 'NetworkError',
+                 'NetworkTimeoutError',
+                 'QueryParserError',
+                 'RangeError',
+                 'RuntimeError',
+                 'UnimplementedError',
+                 ):
+        xapian_exception = getattr(xapian, name, None)
+        if xapian_exception is not None:
+            xapian_exception.__bases__ += (XapianError, )
+            globals()['Xapian' + name] = xapian_exception
+
+_rebase_xapian_exceptions()
